--- a/todo-api/views/index.html
+++ b/todo-api/views/index.html
@@ -14,10 +14,10 @@
 <body>
     <header>
         <h1>todo <span>list</span></h1>
-        <p>suck my dick world i never asked to be alive</p>
+        <p>todo looks like the weirdest word after you've written it so many times.</p>
     </header>
     <section class="form">
-        <input type="text" id="todoInput" placeholder="Insert your taskie here, task daddy-san">
+        <input type="text" id="todoInput" placeholder="Write a todo">
     </section>
     <ul class="list">
     </ul>
